# SIQ

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: py-ci.yml  unity-tests.yml  web-ci.yml
cv_engine/: metrics.py
cv_engine/pose/: base.py  mediapipe_adapter.py  movenet_adapter.py  utils.py
cv_engine/tests/: test_backview_metrics_smoke.py  test_metrics_accuracy.py  test_norfair_unique_ids.py  test_tracking_adapters.py
cv_engine/tracking/: base.py  bytetrack.py  factory.py  norfair.py
docs/: android_local_detector.md  ar_targets_poc.md  backview_v1.md  billing_tiers.md  ci_unity.md  coach.md  edge_benchmark_report.md  golden_tests.md  observability.md
fastapi/: __init__.py  status.py  testclient.py
metrics/: angle.py  ball.py  carry_v1.py  club.py  pose_angles.py
mobile/: App.tsx
opentelemetry/: __init__.py
opentelemetry/metrics/: __init__.py
opentelemetry/trace/: __init__.py
pydantic/: __init__.py
scripts/: __init__.py  export_models.py
server/: ar_targets.py  leaderboard.py  main.py  testing.py
server/models/: __init__.py  entitlement.py
server/routes/: billing.py
server/schemas/: billing.py  coach.py
siq/: __init__.py  observability.py
siq/coach/: chat.py  (+4 more)
tests/: test_coach_chat.py  test_export_models.py  test_highlight_maker.py  test_leaderboard_service.py  test_share_flow.py  test_upgrade_screen_snapshot.py  test_user_access_engine.py
web/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
(+92 files in other folders)
