[project]
name = "siq"
version = "0.1.0"
description = "SoccerIQ / SIQ backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "siq*",
    "server*",
    "cv_engine*",
    "metrics*",
    "fastapi*",
    "pydantic*",
    "opentelemetry*",
    "scripts*",
]
